fixe transition mobile 2

--- a/styles/components/global/navbar.scss
+++ b/styles/components/global/navbar.scss
@@ -2,7 +2,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     padding: 15px 0;
     mix-blend-mode: difference;
     z-index: 1111;
